meta item category, subcategory, attributes apis
